tests/paczka1/fuzzy1/32782145.err
Error in line 1: 2SBhQ S405 11,58
Error in line 10: 2SBhQ S405 26,8
Error in line 17: S213 S405 vv,9
Error in line 25: pg2Z A569 76,2
Error in line 31: Md5ooZAFfI S405 15,1
Error in line 37: OmPWJRBll S213 2H,7
Error in line 38: 2SBhQ A569 97,2
Error in line 36: OmPWJRBll S405 2,3
